# photobroom

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .mergify.yml  .travis.yml  CMakeLists.txt  CMakePresets.json  Doxyfile  Notes  README.md  README.txt  _travis.yml  _vcpkg.json  _zoom_logic_8js.html  a__config__tab_8hpp.html  a__config__tab_8hpp__dep__incl.dot  a__config__tab_8hpp__incl.dot  a__config__tab_8hpp_source.html  accumulative__queue_8hpp.html  accumulative__queue_8hpp__dep__incl.dot  accumulative__queue_8hpp__incl.dot  accumulative__queue_8hpp_source.html  actions_8hpp.html  actions_8hpp__dep__incl.dot  actions_8hpp__incl.dot  actions_8hpp_source.html  actions__model_8cpp.html  actions__model_8cpp__incl.dot  actions__model_8hpp.html  actions__model_8hpp__dep__incl.dot  actions__model_8hpp__incl.dot  actions__model_8hpp_source.html  aexif__reader_8cpp.html  aexif__reader_8cpp__incl.dot  aexif__reader_8cpp_a924c65653028717d24e4100e06871ac3_icgraph.dot  aexif__reader_8hpp.html  aexif__reader_8hpp__dep__incl.dot  aexif__reader_8hpp__incl.dot  aexif__reader_8hpp_source.html  (+5328 more)
cmake/win32/: CMakeLists.txt
images/: CMakeLists.txt
src/: CMakeLists.txt  config.hpp.in  config_storage.cpp  config_storage.hpp  configurationfactory.hpp  features.hpp  iconfiguration.hpp  ientry.hpp  main.cpp
src/analyzer/: CMakeLists.txt  ianalyzer.hpp  iphoto_crawler.hpp  photo_crawler.cpp  photo_crawler.hpp  photo_crawler_builder.hpp
src/configuration/: CMakeLists.txt  configuration.hpp  configuration_accessor.hpp  configurationfactory.cpp  configurationfactory.hpp  constants.hpp  constraints.hpp  default_configuration.hpp  entrydata.cpp  entrydata.hpp  iconfiguration.hpp
src/core/: CMakeLists.txt  accumulative_queue.hpp  algo.hpp  aphoto_info.hpp  athumbnail_manager.hpp  base_tags.hpp  cache.hpp  callback_ptr.hpp  cast.hpp  chain_controller.hpp  configuration.hpp  constants.hpp  containers_utils.hpp  core_factory.hpp  core_factory_accessor.hpp  core_factory_qobject.hpp  core_test.cmake  core_test.py  crash_catcher.hpp  cross_thread_call.hpp  cross_thread_callback.hpp  data_from_path_extractor.hpp  data_ptr.hpp  disk_observer.hpp  down_cast.hpp  exif_reader_factory.hpp  features_manager.hpp  features_manager_compositor.hpp  ffmpeg_video_details_reader.hpp  file_lock.hpp  filter_engine.hpp  function_wrappers.hpp  generic_concepts.hpp  hash_functions.hpp  hdr_assembler.hpp  iconfiguration.hpp  icore_factory.hpp  icore_factory_accessor.hpp  id.hpp  iexif_reader.hpp  (+81 more)
src/crash_catcher/: CMakeLists.txt  crash_catcher.cpp  crash_catcher.hpp  crash_catcher_breakpad.cpp  crash_catcher_internal.cpp
src/database/: CMakeLists.txt  README  action.hpp  actions.hpp  apeople_information_accessor.hpp  aphoto_change_log_operator.hpp  backend_utils.hpp  database_backends_tests.cmake  database_builder.hpp  database_client.hpp  database_executor_traits.hpp  database_integration_tests.cmake  database_pch.hpp  database_qcoro_utils.hpp  database_queue.hpp  database_status.hpp  database_tests.cmake  databasebuilder.hpp  databasefactory.hpp  entry.hpp  explicit_photo_delta.hpp  filter.hpp  general_flags.hpp  generic_flags.hpp  group.hpp  iaction.hpp  ibackend.hpp  iconfiguration.hpp  idatabase.hpp  idatabase_builder.hpp  idatabase_plugin.hpp  ifs.hpp  igroup_operator.hpp  ipeople_information_accessor.hpp  iphoto_change_log_operator.hpp  iphoto_info.hpp  iphoto_info_cache.hpp  iphoto_info_creator.hpp  iphoto_info_manager.hpp  iphoto_operator.hpp  (+20 more)
src/database_tools/: CMakeLists.txt  photos_analyzer.hpp  photos_updater.hpp
src/env/: PhotoBroom.hpp.cmake  PhotoBroom.rc  README  photo_broom.desktop
src/face_recognition/: CMakeLists.txt  encoded_faces_cache.cpp  encoded_faces_cache.hpp  face_recognition.cpp  face_recognition.hpp  faces_encoder.cpp  faces_encoder.hpp
src/gui/: CMakeLists.txt  features.hpp  gui.hpp  gui_tests.cmake  inotifications.hpp
src/photos_crawler/: CMakeLists.txt  ianalyzer.hpp  ifile_system_scanner.hpp  iphoto_crawler.hpp  photo_crawler.hpp  photo_crawler_builder.hpp  photos_crawler_test.cmake
src/photos_deduplicator/: CMakeLists.txt  photos_deduplicator.cpp
src/plugins/: CMakeLists.txt  iplugin_loader.hpp  plugin_loader.hpp
src/project_utils/: CMakeLists.txt  iproject.hpp  iproject_manager.hpp  misc.hpp  project.hpp  project_manager.hpp
src/rust_hello/: CMakeLists.txt  lib.rs  rust_hello.hpp
src/system/: CMakeLists.txt  crash_catcher.hpp  filesystem.cppm  filesystem.hpp  paths.hpp.cmake  paths_unix.hpp.cmake  paths_win.hpp.cmake  system.cppm  system.cxx  system.hpp  system_tests.cmake
src/tests/: CMakeLists.txt  RunAllTests.cpp  analyzerTests.cpp  databaseTests.cpp  entrydata_tests.cpp
src/unit_tests_utils/: CMakeLists.txt  empty_logger.hpp  fake_photo_info.hpp  fake_task_executor.hpp  general.hpp  mock_athumbnail_generator.hpp  mock_backend.hpp  mock_configuration.hpp  mock_core_factory_accessor.hpp  mock_database.hpp  mock_db_utils.hpp  mock_exif_reader.hpp  mock_exif_reader_factory.hpp  mock_image_cache.hpp  mock_logger_factory.hpp  mock_media_information.hpp  mock_model_compositor_data_source.hpp  mock_photo_info.hpp  mock_photo_operator.hpp  mock_qabstractitemmodel.hpp  mock_thumbnail_cache.hpp  mock_thumbnails_cache.hpp  mock_thumbnails_generator.hpp  printers.hpp
src/updater/: CMakeLists.txt  iupdater.cpp  iupdater.hpp  updater.cpp  updater.hpp
src/wasm/: CMakeLists.txt  main.cpp
tests/core/: CMakeLists.txt  tree_tests.cpp  ts_multi_head_queue_tests.cpp
tests/database/: CMakeLists.txt
tests/gui/: CMakeLists.txt  data_tests.cpp  main.cpp  mock_configuration.hpp  mock_database.hpp  mock_qabstractitemmodel.hpp  positions_calculator_tests.cpp  positions_reseter_tests.cpp
tests/photos_crawler/: CMakeLists.txt  (+1 more)
tools/: CMakeLists.txt  DlibBuilder.py  DlibDownloader.py  InterpreterDownloader.py  PagesProcessor.py  PhotoBroom.hpp.cmake  PhotoBroom.rc  img_manip.cpp  main.cpp  prepare_dependencies.py  svg2any.py  update_license.py
tr/: CMakeLists.txt  crash_catcher_dialog_en.ts  crash_catcher_dialog_pl.ts  photo_broom_en.ts  photo_broom_pl.ts
(+9289 files in other folders)
